Removing List#getFirst() method usage for pre java 21 compatibility